Fixed a bug with button active state on mobile

--- a/style.css
+++ b/style.css
@@ -1112,6 +1112,13 @@ ul li::marker {
     background-color 0.12s ease;
 }
 
+.button-primary:not(:active) {
+  transition:
+    scale 0.4s cubic-bezier(0.34, 1.56, 0.64, 1),
+    box-shadow 0.3s ease,
+    background-color 0.3s ease;
+}
+
 /* 
 Variants for Samsung Internet,
 since it doesn't support many features
